# playground

./: .gitignore  LICENSE  README.md  compile_flags.txt  playground.code-workspace
cpucache/: CMakeLists.txt  README.md  buildconf.yaml  falsesharing.cpp  traversals.cpp
fwcmatch/: CMakeLists.txt  README.md  buildconf.yaml
fwcmatch/src/: basemtproc.cpp  basemtproc.h  basepcproc.cpp  basepcproc.h  baseprodconsproc.cpp  baseprodconsproc.h  bench.cpp  common.h  dringbuffer.h  fgetsreader.cpp  fgetsreader.h  filereader.h  fnmatchwildcard.cpp  fnmatchwildcard.h  fstreamreader.cpp  fstreamreader.h  linesblock.h  mmapreader.cpp  mmapreader.h  mtcondvar2proc.cpp  mtcondvar2proc.h  mtcondvarproc.cpp  mtcondvarproc.h  mtcondvarproc2.cpp  mtcondvarproc2.h  mtlockfreeproc.cpp  mtlockfreeproc.h  mtlockreadproc.cpp  mtlockreadproc.h  mtmpmcproc.cpp  mtmpmcproc.h  mtsemproc.cpp  mtsemproc.h  mywildcard.cpp  mywildcard.h  noncopyable.h  proctools.cpp  proctools.h  prodconsgproc.cpp  prodconsgproc.h  (+10 more)
microbench/: README.md  buildconf.yaml  containers.cpp  misc.cpp  return_several.cpp
